--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^20.5.0",
     "autoprefixer": "^10.4.14",
+    "clsx": "^2.0.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^2.2.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
